# travis-ci-test

./: .travis.yml  CMakeLists.txt  README.md
benchmarks/: SharedLibraryBenchmarks.cpp
include/: config.h
src/: Main.cpp
test/: SharedLibraryTest.cpp
